nav-bar z-index fix

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     position: fixed;
+    z-index: 100000000;
 }
 
 #navbar-loggedin {
@@ -15,7 +16,6 @@
     width: 90%;
     max-width: 1240px;
     align-items: center;
-    z-index: 10;
 }
 
 #navbar-loggedout {
